--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exam Task</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header class="header">
+        <div class="burger">
+            <button class="basic-button basic-button--burger-bg"></button>
+        </div>
+        <!-- /.button -->
+        <div class="logo">
+            <a href="#" class="logo-link">
+                <img src="./img/header-imgs/Group.svg" alt="CPS logo is here" class="logo__img">
+            </a>
+        </div>
+        <!-- /.logo logo__img -->
+        <div class="conect-us buttons-block">
+            <button class="basic-button basic-button--chat-bg"></button>
+            <!-- /.header-button -->
+            <button class="basic-button basic-button--call-bg"> </button>
+            <!-- /.header-button -->
+            <button class="basic-button basic-button--profile-bg"></button>
+            <!-- /.header-button -->
+        </div>
+        <!-- /.conect-us buttons-block -->
+        <div class="tools-block buttons-block">
+            <button class="basic-button basic-button--repair-bg"></button>
+             <!-- /.button -->
+            <button class="basic-button basic-button--checkstatus-bg"></button>
+            <!-- /.button -->
+        </div>
+        <!-- /.tools-block -->
+    </header>
+    <!-- /.header -->
+
+    <section class="services-header">
+        <div class="service__header">
+            <h1 class="services__text">
+                Услуги и сервисы
+            </h1>
+            <div class="service-wide-bth">
+                <button class="service-wide-bth--repair-img">
+                        <span class="header-button--service-txt">
+                            Оставить заявку
+                        </span>
+                </button> 
+                <!-- /.header-button -->
+                <button class="service-wide-bth--checkstatus-img">
+                    <span class="header-button--service-txt">
+                        Статус ремонта
+                    </span>
+                </button> 
+                <!-- /.header-button -->
+            </div>
+            <!-- /.service__buttons-block -->
+        </div>
+        <!-- /.service-header -->
+    </section>
+
+
+    <nav class="menu-navigation">
+        <div class="services-slider">
+            <div class="services-slider__item services-slider__item--active">
+                <a href="#" class="services-slider__text">Ремонтируемые бренды</a> 
+                <!-- /.slider__text -->
+            </div>
+            <!-- /.slider__item -->
+
+            <div class="services-slider__item">
+                <a href="#" class="services-slider__text">Ремонтируемые устройства</a> 
+                <!-- /.slider__text -->
+            </div>
+            <!-- /.slider__item -->
+
+            <div class="services-slider__item">
+                <a href="#" class="services-slider__text">Цены на услуги</a> 
+                <!-- /.slider__text -->
+            </div>
+            <!-- /.slider__item -->
+
+            <div class="services-slider__item">
+                <a href="#" class="services-slider__text">Адреса сервисных центров</a> 
+                <!-- /.slider__text -->
+            </div>
+            <!-- /.slider__item -->
+
+            <div class="services-slider__item">
+                <a href="#" class="services-slider__text">Специальные цены</a> 
+                <!-- /.slider__text -->
+            </div>
+            <!-- /.slider__item -->
+        </div>
+        <!-- /.services-slider -->
+    </nav>
+
+    <section class="services">
+        <div class="comments">
+            <a href="" class="comments__link">
+                Отзывы
+            </a> 
+            <!-- /.comments__linck -->
+        </div>
+        <!-- /.comments -->
+
+        <div class="services-description">
+            <div class="services__par-block">
+                <p class="services__par-text">
+                    Мы являемся авторизованным сервисным центром по ремонту техники Dell. 
+                    Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое 
+                    количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, 
+                    советуют нас родным и близким.
+                </p>
+
+                <div class="services__readmore-wrap">
+                    <button class="services__readmore-button">
+                            Читать далее
+                    </button> 
+                    <!-- /.services-button__readmore-button -->
+                </div>
+            </div>
+            <!-- /.services-button -->
+            <div class="srevices__img">
+                <img src="./img/section-imgs/MG3223.png" alt="Our CPS logo should must ti be here" class="services__img--picture">
+            </div>
+            <!-- /.section-par -->
+        </div>
+    </section>
+    <!-- /.services -->
 </body>
 </html>
