Included all blocks what i have

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
             </div>
             <!-- /.services-button -->
             <div class="srevices__img">
-                <img src="./img/section-imgs/MG3223.png" alt="Our CPS logo should must ti be here" class="services__img--picture">
+                <img src="./img/section-imgs/MG3223.png" class="srevices__img--picture" alt="Our CPS logo should must ti be here">
             </div>
             <!-- /.section-par -->
         </div>
