--- a/src/index.html
+++ b/src/index.html
@@ -130,5 +130,82 @@
         </div>
     </section>
     <!-- /.services -->
+
+    <div class="repair">
+        <div class="repair-header">
+            <h2 class="repair-header__text">
+                Ремонт техники различных брендов
+            </h2>
+            <!-- /.services-header__text -->
+        </div>
+        <!-- /.services-header -->
+        <div class="swiper-container repair-main">
+            <nav class="swiper-wrapper repair-cards">
+                <a href="#" class=" swiper-slide repair-cards__button">
+                    <img src="./img/repair-imgs/Bitmap.svg" alt="Lenovo image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class=" swiper-slide repair-cards__button">
+                    <img src="./img/repair-imgs/Bitmap (1).svg" alt="Samsung image" class="repair-cards__img repair-cards__img--cliped">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class=" swiper-slide repair-cards__button">
+                    <img src="./img/repair-imgs/Bitmap (2).svg" alt="Apple image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (3).svg" alt="ViewSonic image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (4).svg" alt="Bosch image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (5).svg" alt="HewlettPackard image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (6).svg" alt="Accer image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (7).svg" alt="Sony image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap.svg" alt="Lenovo image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (1).svg" alt="Samsung image" class="repair-cards__img repair-cards__img--cliped">
+                </a>
+                <!-- /.repair-cards__button -->
+                <a href="#"  class="repair-cards__button swiper-slide">
+                    <img src="./img/repair-imgs/Bitmap (2).svg" alt="Apple image" class="repair-cards__img">
+                </a>
+                <!-- /.repair-cards__button -->
+                <div class="repair-cards__button spacer">
+                    <img src="" alt="" class="repair-cards__img">
+                </div>
+                <!-- /.repair-cards__button -->             
+            </nav>
+            <!-- /.services-cards -->
+
+            <div class="swiper-pagination"></div>
+
+
+        </div>
+        <!-- /.services-main -->
+
+        <div class="services__readmore-wrap services__readmore-wrap--repair-mode">
+            <button id="repairShowBtn" class="services__readmore-button">
+                    Показать все
+            </button> 
+            <!-- /.services-button__readmore-button -->
+        </div>
+        <!-- /.services-readmore-wrap -->
+    </div>
+    <!-- /.services -->
 </body>
 </html>
