--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,6 @@
     <title>Exam Task</title>
 </head>
 <body>
-    <!-- <div class="main-container">
-
-    </div> -->
     <nav class="main-menu">
         <div class="main-menu__header">
             <div class="main-menu__btn-wrap">
@@ -125,6 +122,7 @@
         </div>
         <!-- /.mm-lang-swicher -->
     </nav>
+    <!-- .main-menu -->
 
     <header class="header">
         <div class="burger">
@@ -179,7 +177,7 @@
         </div>
         <!-- /.service-header -->
     </section>
-
+    <!-- .services-header -->
 
     <nav class="menu-navigation">
         <div class="services-slider">
@@ -215,6 +213,7 @@
         </div>
         <!-- /.services-slider -->
     </nav>
+    <!-- menu-navigation -->
 
     <section class="services">
         <div class="comments">
@@ -313,8 +312,6 @@
             <!-- /.services-cards -->
 
             <div class="swiper-pagination"></div>
-
-
         </div>
         <!-- /.services-main -->
 
@@ -327,5 +324,60 @@
         <!-- /.services-readmore-wrap -->
     </div>
     <!-- /.services -->
+
+    <div class="tech">
+        <div class="repair-header">
+            <h2 class="repair-header__text">
+                Ремонт различных видов техники
+            </h2>
+        </div>
+
+        <div class="tech-block">
+            <div class="swiper-container tech-main">
+                <nav class="swiper-wrapper tech-cards">
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт ноутбуков
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт планшетов
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт ПК
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт мобильных
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт мониторов
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт квартир
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                    <a href="" class="swiper-slide tech-item">
+                        Ремонт зубов
+                    </a>
+                    <!-- /.swiper-slide tech-item -->
+                </nav>
+                <!-- /.swiper-wrapper tech-cards -->
+                <div class="swiper-pagination"></div>
+            </div>
+            <!-- /.swiper-container tech-main -->
+        </div>
+        <!-- /.tech-block -->
+        <div class="services__readmore-wrap services__readmore-wrap--repair-mode">
+            <button id="repairShowBtn" class="services__readmore-button">
+                    Показать все
+            </button> 
+            <!-- /.services-button__readmore-button -->
+        </div>
+        <!-- /.services-readmore-wrap -->
+    </div>
+    <!-- /.tech -->
 </body>
 </html>
