Included tech bahavior and some styles

--- a/src/index.html
+++ b/src/index.html
@@ -335,32 +335,46 @@
         <div class="tech-block">
             <div class="swiper-container tech-main">
                 <nav class="swiper-wrapper tech-cards">
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт ноутбуков
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт ноутбуков
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт планшетов
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт планшетов
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт ПК
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт ПК
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт мобильных
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт мобильных
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт мониторов
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт мониторов
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт квартир
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт квартир
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
-                    <a href="" class="swiper-slide tech-item">
-                        Ремонт зубов
+                    <a href="#" class="swiper-slide tech-item">
+                        <span class="tech-item__text">
+                            Ремонт зубов
+                        </span>
                     </a>
                     <!-- /.swiper-slide tech-item -->
                 </nav>
