Includr price block html only

--- a/src/index.html
+++ b/src/index.html
@@ -393,5 +393,253 @@
         <!-- /.services-readmore-wrap -->
     </div>
     <!-- /.tech -->
+
+    <div class="price">
+        <div class="repair-header">
+            <h2 class="repair-header__text">
+                Цены на услуги
+            </h2>
+        </div>
+
+        <div class="price-block">
+            <div class="swiper-container price-main">
+                <nav class="swiper-wrapper price-cards">
+                    <div class="swiper-slide price-card">
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Ремонные услуги
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                Тестирование с выдачей технического заключения
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Цена
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                Бесплатно
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Срок
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                30-120 мин. 
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item--link-item">
+                            <a href="#" class="price-card-item__link">
+                                Заказать
+                            </a>
+                        </div>
+                        <!-- /.price-card-item -->
+                    </div>
+                    <!-- /.swiper-slide price-card -->
+
+                    <div class="swiper-slide price-card">
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Ремонные услуги
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                Замена полифоничелкого динамика
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Цена
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                1000 &#8381;
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Срок
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                30-120 мин.
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item--link-item">
+                            <a href="#" class="price-card-item__link">
+                                Заказать
+                            </a>
+                        </div>
+                        <!-- /.price-card-item -->
+                    </div>
+                    <!-- /.swiper-slide price-card -->
+
+                    <div class="swiper-slide price-card">
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Ремонные услуги
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                Диагностика
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Цена
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                1000 &#8381;
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Срок
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                30 мин.
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item--link-item">
+                            <a href="#" class="price-card-item__link">
+                                Заказать
+                            </a>
+                        </div>
+                        <!-- /.price-card-item -->
+                    </div>
+                    <!-- /.swiper-slide price-card -->
+
+                    <div class="swiper-slide price-card">
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Ремонные услуги
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                Замена диспля
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Цена
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                1000 &#8381;
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Срок
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                30-120 мин.
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item--link-item">
+                            <a href="#" class="price-card-item__link">
+                                Заказать
+                            </a>
+                        </div>
+                        <!-- /.price-card-item -->
+                    </div>
+                    <!-- /.swiper-slide price-card -->
+
+                    <div class="swiper-slide price-card">
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Ремонные услуги
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                Замена програмного обеспечения
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Цена
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                1000 &#8381;
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item">
+                            <span class="price-card-item__header">
+                                Срок
+                            </span>
+                            <!-- /.price-card-item__header -->
+                            <span class="price-card-item__description">
+                                30-120 мин.
+                            </span>
+                            <!-- /.price-card-item__description -->
+                        </div>
+                        <!-- /.price-card-item -->
+
+                        <div class="price-card-item--link-item">
+                            <a href="#" class="price-card-item__link">
+                                Заказать
+                            </a>
+                        </div>
+                        <!-- /.price-card-item -->
+                    </div>
+                    <!-- /.swiper-slide price-card -->
+                </nav>
+                <!-- /.swiper-wrapper price-cards -->
+            </div>
+            <!-- /.swiper-container price-main -->
+        </div>
+        <!-- /.price-block -->
+    </div>
+    <!-- /.price -->
 </body>
 </html>
