--- a/src/index.html
+++ b/src/index.html
@@ -258,63 +258,66 @@
             <!-- /.services-header__text -->
         </div>
         <!-- /.services-header -->
-        <div class="swiper-container repair-main">
-            <nav class="swiper-wrapper repair-cards">
-                <a href="#" class=" swiper-slide repair-cards__button">
-                    <img src="./img/repair-imgs/Bitmap.svg" alt="Lenovo image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class=" swiper-slide repair-cards__button">
-                    <img src="./img/repair-imgs/Bitmap (1).svg" alt="Samsung image" class="repair-cards__img repair-cards__img--cliped">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class=" swiper-slide repair-cards__button">
-                    <img src="./img/repair-imgs/Bitmap (2).svg" alt="Apple image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (3).svg" alt="ViewSonic image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (4).svg" alt="Bosch image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (5).svg" alt="HewlettPackard image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (6).svg" alt="Accer image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (7).svg" alt="Sony image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap.svg" alt="Lenovo image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (1).svg" alt="Samsung image" class="repair-cards__img repair-cards__img--cliped">
-                </a>
-                <!-- /.repair-cards__button -->
-                <a href="#"  class="repair-cards__button swiper-slide">
-                    <img src="./img/repair-imgs/Bitmap (2).svg" alt="Apple image" class="repair-cards__img">
-                </a>
-                <!-- /.repair-cards__button -->
-                <div class="repair-cards__button spacer">
-                    <img src="" alt="" class="repair-cards__img">
-                </div>
-                <!-- /.repair-cards__button -->             
-            </nav>
-            <!-- /.services-cards -->
 
-            <div class="swiper-pagination"></div>
-        </div>
+        <div class="repair-block">
+            <div class="swiper-container repair-main">
+                <nav class="swiper-wrapper repair-cards">
+                    <a href="#" class=" swiper-slide repair-cards__button">
+                        <img src="./img/repair-imgs/Bitmap.svg" alt="Lenovo image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class=" swiper-slide repair-cards__button">
+                        <img src="./img/repair-imgs/Bitmap (1).svg" alt="Samsung image" class="repair-cards__img repair-cards__img--cliped">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class=" swiper-slide repair-cards__button">
+                        <img src="./img/repair-imgs/Bitmap (2).svg" alt="Apple image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (3).svg" alt="ViewSonic image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (4).svg" alt="Bosch image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (5).svg" alt="HewlettPackard image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (6).svg" alt="Accer image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (7).svg" alt="Sony image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap.svg" alt="Lenovo image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (1).svg" alt="Samsung image" class="repair-cards__img repair-cards__img--cliped">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <a href="#"  class="repair-cards__button swiper-slide">
+                        <img src="./img/repair-imgs/Bitmap (2).svg" alt="Apple image" class="repair-cards__img">
+                    </a>
+                    <!-- /.repair-cards__button -->
+                    <div class="repair-cards__button spacer">
+                        <img src="" alt="" class="repair-cards__img">
+                    </div>
+                    <!-- /.repair-cards__button -->             
+                </nav>
+                <!-- /.services-cards -->
+
+                <div class="swiper-pagination"></div>
+            </div>
         <!-- /.services-main -->
-
+        </div>
+        
         <div class="services__readmore-wrap services__readmore-wrap--repair-mode">
             <button id="repairShowBtn" class="services__readmore-button">
                     Показать все
@@ -406,37 +409,37 @@
                 <nav class="swiper-wrapper price-cards">
                     <div class="swiper-slide price-card">
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Ремонные услуги
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 Тестирование с выдачей технического заключения
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Цена
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 Бесплатно
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Срок
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 30-120 мин. 
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
@@ -452,37 +455,37 @@
 
                     <div class="swiper-slide price-card">
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Ремонные услуги
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 Замена полифоничелкого динамика
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Цена
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 1000 &#8381;
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Срок
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 30-120 мин.
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
@@ -498,37 +501,37 @@
 
                     <div class="swiper-slide price-card">
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Ремонные услуги
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 Диагностика
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Цена
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 1000 &#8381;
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Срок
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 30 мин.
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
@@ -544,37 +547,37 @@
 
                     <div class="swiper-slide price-card">
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Ремонные услуги
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 Замена диспля
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Цена
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 1000 &#8381;
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Срок
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 30-120 мин.
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
@@ -590,37 +593,37 @@
 
                     <div class="swiper-slide price-card">
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Ремонные услуги
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 Замена програмного обеспечения
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Цена
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 1000 &#8381;
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
 
                         <div class="price-card-item">
-                            <span class="price-card-item__header">
+                            <p class="price-card-item__header">
                                 Срок
-                            </span>
+                            </p>
                             <!-- /.price-card-item__header -->
-                            <span class="price-card-item__description">
+                            <p class="price-card-item__description">
                                 30-120 мин.
-                            </span>
+                            </p>
                             <!-- /.price-card-item__description -->
                         </div>
                         <!-- /.price-card-item -->
@@ -635,6 +638,8 @@
                     <!-- /.swiper-slide price-card -->
                 </nav>
                 <!-- /.swiper-wrapper price-cards -->
+
+                <div class="swiper-pagination"></div>
             </div>
             <!-- /.swiper-container price-main -->
         </div>
