--- a/src/index.html
+++ b/src/index.html
@@ -446,7 +446,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать
+                                Заказать >
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -492,7 +492,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать
+                                Заказать >
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -538,7 +538,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать
+                                Заказать >
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -584,7 +584,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать
+                                Заказать >
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -630,7 +630,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать
+                                Заказать >
                             </a>
                         </div>
                         <!-- /.price-card-item -->
