Add some scss to comrecial-offer block

--- a/src/index.html
+++ b/src/index.html
@@ -446,7 +446,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать >
+                                Заказать
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -492,7 +492,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать >
+                                Заказать
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -538,7 +538,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать >
+                                Заказать
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -584,7 +584,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать >
+                                Заказать
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -630,7 +630,7 @@
 
                         <div class="price-card-item--link-item">
                             <a href="#" class="price-card-item__link">
-                                Заказать >
+                                Заказать
                             </a>
                         </div>
                         <!-- /.price-card-item -->
@@ -646,5 +646,22 @@
         <!-- /.price-block -->
     </div>
     <!-- /.price -->
+
+    <div class="commercial-offer">
+        <p class="commercial-offer__desc">
+            Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. 
+            Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.
+        </p>
+        <!-- /.commercial-offer__desc -->
+        <div class="commercial-offer__link-wrap">
+            <div class="commercial-offer__link">
+                Получить коммерческое предложение
+            </div>
+            <!-- /.commercial-offer__link -->
+            <img src="../src/img/commecial-offer-imgs/Line.png" alt="Arrow" class="commercial-offer__img">
+        </div>
+        <!-- /.commercial-offer__link-wrap -->
+    </div>
+    <!-- /.commercial-offer -->
 </body>
 </html>
