Need to fixed some behavior bug in menu-navigation block

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
             </div>
             <!-- /.tech-block -->
             <div class="services__readmore-wrap services__readmore-wrap--repair-mode">
-                <button id="repairShowBtn" class="services__readmore-button">
+                <button id="techShowBtn" class="services__readmore-button">
                         Показать все
                 </button> 
                 <!-- /.services-button__readmore-button -->
