Added price table for wide screens

--- a/src/index.html
+++ b/src/index.html
@@ -653,37 +653,125 @@
 
             <div class="price-wide">
                 <div class="price-wide-header">
-                    <span class="price-wide-header__service-opt">
+                    <span class="price-wide-header__elem price-wide-header__elem--service-opt">
                         Ремонтные услуги
                     </span>
-                    <span class="price-wide-header__price">
+                    <span class="price-wide-header__elem price-wide-header__elem--price">
                         Цена
                     </span>
-                    <span class="price-wide-header__term">
+                    <span class="price-wide-header__elem price-wide-header__elem--term">
                         Срок
                     </span>
-                    <span class="price-wide-header__spacer"></span>
+                    <span class="price-wide-header__elem price-wide-header__elem--spacer"></span>
                 </div>
 
                 <div class="price-wide-table">
                     <div class="price-wide-table__row">
-                        <div class="price-wide-table__cell--option">
+                        <span class="price-wide-table__cell price-wide-table__cell--option">
                             Диагностика
-                        </div>
+                        </span>
                         <!-- /.price-wide-table__cell -->
-                        <div class="price-wide-table__cell--price">
+                        <span class="price-wide-table__cell price-wide-table__cell--price">
                             Бесплатно
-                        </div>
+                        </span>
                         <!-- /.price-wide-table__cell -->
-                        <div class="price-wide-table__cell--term">
+                        <span class="price-wide-table__cell price-wide-table__cell--term">
                             30 мин
-                        </div>
+                        </span>
                         <!-- /.price-wide-table__cell -->
-                        <div class="price-wide-table__cell--wide-mode">
-                            <a href="#" class="price-card-item__link">
+                        <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
+                            <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
                                 Заказать
                             </a>
-                        </div>
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                    </div>
+                    <!-- /.price-wide-table__row -->
+
+                    <div class="price-wide-table__row">
+                        <span class="price-wide-table__cell price-wide-table__cell--option">
+                            Замена диспля
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--price">
+                            1000 &#8381;
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--term">
+                            30-120 мин
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
+                            <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                Заказать
+                            </a>
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                    </div>
+                    <!-- /.price-wide-table__row -->
+
+                    <div class="price-wide-table__row">
+                        <span class="price-wide-table__cell price-wide-table__cell--option">
+                            Замена полифоничелкого динамика
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--price">
+                            1000 &#8381;
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--term">
+                            30-120 мин
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
+                            <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                Заказать
+                            </a>
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                    </div>
+                    <!-- /.price-wide-table__row -->
+
+                    <div class="price-wide-table__row">
+                        <span class="price-wide-table__cell price-wide-table__cell--option">
+                            Тестирование с выдачей технического заключения
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--price">
+                            1000 &#8381;
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--term">
+                            30-120 мин
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
+                            <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                Заказать
+                            </a>
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                    </div>
+                    <!-- /.price-wide-table__row -->
+
+                    <div class="price-wide-table__row">
+                        <span class="price-wide-table__cell price-wide-table__cell--option">
+                            Замена програмного обеспечения
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--price">
+                            1000 &#8381;
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--term">
+                            30-120 мин
+                        </span>
+                        <!-- /.price-wide-table__cell -->
+                        <span class="price-wide-table__cell price-wide-table__cell--wide-mode">
+                            <a href="#" class="price-card-item__link price-card-item__link--wide-mode">
+                                Заказать
+                            </a>
+                        </span>
                         <!-- /.price-wide-table__cell -->
                     </div>
                     <!-- /.price-wide-table__row -->
