Adjusted selly bugs in sliders, at last

--- a/src/index.html
+++ b/src/index.html
@@ -319,7 +319,7 @@
                     </nav>
                     <!-- /.services-cards -->
     
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination" style="position:static"></div>
                 </div>
             <!-- /.services-main -->
             </div>
