Finished with close button animaton

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
             <nav class="main-menu">
                 <div class="main-menu__header">
                     <div class="main-menu__btn-wrap">
-                        <button class="basic-button basic-button--close-bg"></button>
+                        <button class="basic-button basic-button--close-bg">
+                            <div class="basic-button--close-bg__first-stick cross"></div>
+                            <div class="basic-button--close-bg__second-stick cross"></div>
+                        </button>
                     </div>
                     <!-- /.close -->
                     <div class="logo">
