Started work on modal blocks

--- a/src/index.html
+++ b/src/index.html
@@ -847,6 +847,57 @@
 
         </main>
         <!-- /.main-container -->
+
+        <div class="modal-wrap">
+            <div class="modal-closing-block">
+                <div class="modal__btn-wrap">
+                    <button class="basic-button basic-button--close-bg">
+                        <div class="basic-button--close-bg__first-stick cross"></div>
+                        <div class="basic-button--close-bg__second-stick cross"></div>
+                    </button>
+                </div>
+                <!-- /.close -->
+            </div>
+            <!-- /.modal-closing-block -->
+            <div class="modal-header">
+                <h2 class="modal-header__text">
+                    Обратная связь
+                </h2>
+                <!-- /.modal-header__text -->
+            </div>
+            <!-- /.modal-header -->
+            <form action="#" class="feedback-form">
+                <input type="text" class="modal-form-input" placeholder="Имя">
+                <input type="tel" class="modal-form-input" placeholder="Телефон">
+                <input type="email" class="modal-form-input" placeholder="Электронная почта">
+                <textarea class="modal-form-input" rows="6" placeholder="Сообщение" style="min-width: 280px;">
+                   
+                </textarea>
+            </form>
+            <!-- /.feedback-form -->
+            <div class="modal-description">
+                <span class="modal-description__text">
+                    Нажимая "отправить", вы даете согласие на
+                </span> 
+                <!-- /.modal-description__text -->
+                <a href="" class="modal-description__link">
+                    обработку персональных данных
+                </a> 
+                <!-- /.modal-description__link -->
+                <span class="modal-description__text">
+                    и соглашаетесь с нашей
+                </span> 
+                <!-- /.modal-description__text -->
+                <a href="" class="modal-description__link">
+                    политикой конфиденсиалности
+                </a> 
+                <!-- /.modal-description__link -->
+            </div>
+            <!-- /.modal-description -->
+            <div class="modal-submit"></div>
+            <!-- /.modal-submit -->
+        </div>
+        <!-- /.modal-wrap -->
     </div>
     <!-- /.full-screen-wrap -->
 </body>
