Finished with all modals

--- a/src/index.html
+++ b/src/index.html
@@ -907,6 +907,63 @@
             <!-- /.modal -->
         </div>
         <!-- /.modal-wrap -->
+
+        <div class="modal-wrap">
+            <div id="callback" class="modal">
+                <div class="modal-closing-block">
+                    <div class="modal__btn-wrap">
+                        <button id="callback-close" class="basic-button basic-button--close-bg">
+                            <div class="basic-button--close-bg__first-stick cross"></div>
+                            <div class="basic-button--close-bg__second-stick cross"></div>
+                        </button>
+                    </div>
+                    <!-- /.close -->
+                </div>
+                <!-- /.modal-closing-block -->
+                <div class="modal-header">
+                    <h2 class="modal-header__text">
+                        Заказать звонок
+                    </h2>
+                    <!-- /.modal-header__text -->
+                </div>
+                <!-- /.modal-header -->
+                <div class="modal-content">
+                    <form action="#" class="feedback-form">
+                        <input type="tel" class="modal-form-input" placeholder="Телефон">
+                    </form>
+                    <!-- /.feedback-form -->
+                    <div class="modal-description">
+                        <span class="modal-description__text">
+                            Нажимая "отправить", вы даете согласие на
+                        </span> 
+                        <!-- /.modal-description__text -->
+                        <a href="" class="modal-description__link">
+                            обработку персональных данных
+                        </a> 
+                        <!-- /.modal-description__link -->
+                        <span class="modal-description__text">
+                            и соглашаетесь с нашей
+                        </span> 
+                        <!-- /.modal-description__text -->
+                        <a href="" class="modal-description__link">
+                            политикой конфиденсиалности
+                        </a> 
+                        <!-- /.modal-description__link -->
+                    </div>
+                    <!-- /.modal-description -->
+                    <div class="modal-submit">
+                        <button class="basic-long-btn modal-btn">
+                            Отправить
+                        </button> 
+                        <!-- /.basic-long-btn -->
+                    </div>
+                    <!-- /.modal-submit -->
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal -->
+        </div>
+        <!-- /.modal-wrap -->
     </div>
     <!-- /.full-screen-wrap -->
 </body>
